[!!!][FEATURE] Rewrite for 6.2
* Reduce function size and complexity
* Rely on Core functionality
* Compatible with TYPO3 6.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+15-12-21 Daniel Siepmann  <d.siepmann@web-vision.de>
+
+	* Rewrite for TYPO3 CMS 6.2 with less and cleaner code.
+
 10-01-09 Jan Bartels  <j.bartels@adfc-nrw.de>
 
 	* Initial release
